--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
                     </div>
                     <div id="datosOrganizador"></div>
                     <div id="divEnviar">
-                        <input type="submit" id="boton" value="REGISTRARSE">
+                        <input type="submit" id="boton" value="REGISTRARSE" disabled>
                         <p>O</p>
                     </div>
                 </form>
