--- a/landingPage.html
+++ b/landingPage.html
@@ -43,8 +43,8 @@
             <article>
                 <form action="" method="get">
                     <p id="startNow">COMIENZA AHORA</p>
-                    <input type="text" name="usuario" id="user" title="usuario" placeholder="Usuario" required>
-                    <input type="password" name="contraseña" id="pass" title="contraseña" placeholder="Contraseña" required>
+                    <input type="text" name="username" id="user" title="usuario" placeholder="Usuario" required>
+                    <input type="password" name="password" id="pass" title="contraseña" placeholder="Contraseña" required>
                     <input class="boton" type="submit" id="entrar" value="ENTRAR">
                     <p>O</p>
                     <input class="boton" type="button" value="INVITADO">
