--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
             </div>
             <div id="divFormulario">
                 <span id="alertForm" class="spanAlert"></span>
-                <form action="" method="post">
+                <form action="./register.html" method="post">
                     <h2>¡REGISTRESE AHORA!</h2>
                     <div id="teclear">
                         <div>
@@ -67,7 +67,6 @@
                     <div id="datosOrganizador"></div>
                     <div id="divEnviar">
                         <input type="submit" id="boton" value="REGISTRARSE" disabled>
-                        <p>O</p>
                     </div>
                 </form>
             </div>
