--- a/PAGINAS/masInformacion.html
+++ b/PAGINAS/masInformacion.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./CSS/masInformacion.css">
+    <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
-
+    <link rel="stylesheet" href="./CSS/masInformacion.css">
+    
 </head>
 <body>
     <header>
         <div>
-            <img id="logo" src="../IMGS/logoRunTheMountain-removebg-preview.png" alt="RunTheMountain">
+            <a href="./inicio.html"><img id="logo" src="../IMGS/logoRunTheMountain-removebg-preview.png" alt="RunTheMountain"></a>
         </div>
         <nav>
             <a href="" class="aCabecera">Categorias y Premios</a>
-            <a href="" class="aCabecera">ClasificacionesPasadas</a>
+            <a href="" class="aCabecera" id="clasificacionesPasadas"></a>
             <div>
                 <span id="username"></span>
                 <div id="desplegable">
@@ -37,7 +38,99 @@
         <div id="menu">
             <div><span>CARRERA ZAMORANA</span></div><div><i class="bi bi-bookmark"></i></div>
         </div>
+
+        <section>
+            <article>
+                <div id="fotosCarrera">
+                    <div id="carouselExampleIndicators" class="carousel slide">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="../API/users/user12/carreras/imagenes/65be6b6072fbe-image3.jpeg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../API/users/user12/carreras/imagenes/65be6b6073b38-image2.jpeg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../API/users/user12/carreras/imagenes/65be6b6074654-image1.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                </div>
+                <div id="infoCarrera">
+                    <h2>Información de la carrera</h2>
+                    <div><span><i class="bi bi-circle-fill"></i> Fecha :</span><span id="fecha"></span></div>
+                    <div><span><i class="bi bi-circle-fill"></i> Distancia :</span><span id="distancia"></span></div>
+                    <div><span><i class="bi bi-circle-fill"></i> Desnivel :</span><span id="desnivel"></span></div>
+                    <div><span><i class="bi bi-circle-fill"></i> Modalidad :</span><span id="modalidad"></span></div>
+                    <div><span><i class="bi bi-circle-fill"></i> WEB :</span><span id="web"></span></div>
+                    <div><span><i class="bi bi-circle-fill"></i> Lugar :</span><span id="lugar"></span></div>
+                    <div><a href="">DESCARGAR REGLAMENTO</a></div>
+                </div>
+                <div id="map">
+    
+                </div>
+            </article>
+        </section>
+        <section>
+            <article>
+                <div class="titulo">
+                    <div><h2 class="h2Titulo">CATEGORÍAS Y PREMIOS</h2></div>
+                </div>
+                <div id="categorias">
+                    <div class="categoria">
+                        <div class="categoriaCabecera">
+                            <span class="nombreCategoria">CATEGORÍA ADULTA</span>
+                            <span class="sexoCategoria">Masculina y Femenina</span>
+                        </div>
+                        <div class="categoriaCuerpo">
+                            <span>POSICIONES</span>
+                            <span id="primero">1. 100€</span>
+                            <span id="segund">2. 200€</span>
+                            <span id="tercero">3. 300€</span>
+                        </div>
+                    </div>
+                    <div class="categoria">
+                        <div class="categoriaCabecera">
+                            <span class="nombreCategoria">CATEGORÍA ADULTA</span>
+                            <span class="sexoCategoria">Masculina y Femenina</span>
+                        </div>
+                        <div class="categoriaCuerpo">
+                            <span>POSICIONES</span>
+                            <span id="primero">1. 100€</span>
+                            <span id="segund">2. 200€</span>
+                            <span id="tercero">3. 300€</span>
+                        </div>
+                    </div>
+                    <div class="categoria">
+                        <div class="categoriaCabecera">
+                            <span class="nombreCategoria">CATEGORÍA ADULTA</span>
+                            <span class="sexoCategoria">Masculina y Femenina</span>
+                        </div>
+                        <div class="categoriaCuerpo">
+                            <span>POSICIONES</span>
+                            <span id="primero">1. 100€</span>
+                            <span id="segund">2. 200€</span>
+                            <span id="tercero">3. 300€</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
 </body>
+<script src="../bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
 <script src="./JS/masInformacion.js"></script>
 </html>
