--- a/PAGINAS/perfil.html
+++ b/PAGINAS/perfil.html
@@ -151,20 +151,19 @@
         <div class="modal-contenido">
           <span id="cerrarCarreraX" class="cerrar"><i class="bi bi-x-circle"></i></span>
           <div class="modal-cuerpo">
-            <div><label for="portada">Portada</label> <input type="file" name="portada" id="portada" title="Foto portada"></div>
+            <div><label for="portada">Portada</label> <input type="file" name="portada" id="portada" title="Foto portada" accept=".jpg, .jpeg, .png"></div>
             <div><label for="nombreCarrera">Nombre de la Carrera</label> <input type="text" placeholder="Nombre de la Carrera" name="nombreCarrera" id="nombreCarrera" title="Nombre de la Carrera"></div>
             <div id="fechaDiv"><label for="fecha">Fecha</label> <input type="date" name="fecha" id="fecha" title="Fecha del Evento"></div>
             <div><label for="localizacion">Localización</label><input type="text" name="localizacion" id="localizacion" placeholder="Escribe la localización de la carrera" title="Escribe la localización de la carrera"></div>
             <button id="modalidades">MODALIDADES Y CATEGORÍAS<i class="bi bi-plus-circle"></i></button>
-            <div><label for="track">Archivo .GPX de la carrera</label><input type="file" name="track" id="track" title="Track de la carrera"></div>
+            <div><label for="track">Archivo .GPX de la carrera</label><input type="file" name="track" id="track" title="Track de la carrera" accept=".gpx"></div>
             <div><label for="webOrganizacion">WEB de la Organización</label><input type="text" name="webOrganizacion" id="webOrganizacion" title="Web de la Organización" placeholder="Web de la Organización"></div>
             <div><label for="distancia">Distancia en KM</label><input type="number" name="distancia" placeholder="KM" id="distancia" title="Distancia en KM"></div>
-            <div><label for="reglamento">Reglamento PDF</label> <input type="file" name="reglamento" id="reglamento" title="Reglamento de la carrera"></div>
-            <div><label for="imagenes">Imagenes de la Carrera</label><input type="file" name="imagenesCarrera" id="imagenesCarrera" title="imagenesCarrera" multiple></div>
-            
+            <div><label for="reglamento">Reglamento PDF</label> <input type="file" name="reglamento" id="reglamento" title="Reglamento de la carrera" accept=".pdf"></div>
+            <div><label for="imagenes">Imagenes de la Carrera</label><input type="file" name="imagenesCarrera" id="imagenesCarrera" title="imagenesCarrera" multiple accept=".jpg, .jpeg, .png"></div>
         </div>
           <div class="modal-pie">
-            <button class="crearCarreraBoton">CREAR CARRERA</button>
+            <button class="crearCarreraBoton" type="button">CREAR CARRERA</button>
           </div>
         </div>
     </div>
@@ -172,7 +171,7 @@
         <div class="modal-contenido">
           <span id="cerrarModalidadX" class="cerrar"><i class="bi bi-x-circle"></i></span>
           <div class="modal-cuerpo">
-            <div id="botonModalidad"><button id="añadirModalidad">AÑADIR MODALIDAD<i class="bi bi-plus-circle"></i></button></div>
+            <div id="botonModalidad"><button type="button" id="añadirModalidad">AÑADIR MODALIDAD<i class="bi bi-plus-circle"></i></button></div>
             <div id="selectModalidadCategoria">
                 <div><span>Modalidad : </span><label for="trail">Trail</label><input type="radio" name="tipoModalidad" id="trail" value="trail"><label for="maraton">Maratón</label><input type="radio" name="tipoModalidad" id="maraton" value="maraton"><label for="ultra">Ultra</label><input type="radio" name="tipoModalidad" id="ultra" value="ultra"></div>
                 <div><span>Categorias : </span><label for="adulta">Adulta(+20 años)</label><input type="checkbox" name="tipoCategoria[]" class="categoria" id="adulta" value="adulta"><label for="juvenil">Juvenil (De 14 a 19 años)</label><input type="checkbox" name="tipoCategoria[]" class="categoria" value="juvenil"><label for="infantil">Infantil (-14 años)</label><input type="checkbox" id="infantil" class="categoria" name="tipoCategoria[]" value="infantil"></div>
@@ -186,7 +185,7 @@
                         <option value="(M/F)">Ambas</option>
                     </select>
                 </div>
-                <button id="guardarModalidad" class="crearCarreraBoton">GUARDAR</button>
+                <button id="guardarModalidad" type="button" class="crearCarreraBoton">GUARDAR</button>
             </div>
             <div id="modalidadesSeleccionadas">
                 <p>Seleccione los premios para las modalidades de <span id="modalidadEscogida"></span> :</p>
@@ -200,12 +199,11 @@
                 </div>
             </div>
           <div class="modal-pie">
-            <button class="crearCarreraBoton">AÑADIR MODALIDADES</button>
+            <button class="crearCarreraBoton">GUARDAR MODALIDADES</button>
           </div>
         </div>
     </div>
 </body>
-
-<script src="./JS/perfil.js"></script>
 <script src="./JS/togeojson.js"></script>
+<script src="./JS/perfil.js"></script>
 </html>
