--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
                     </div>
 
                     <div id="seleccionar">
-                        <div>
+                        <!-- <div>
                             <label for="imageProfile">Porfavor, seleccione una foto de perfil</label>
                             <input type="file" id="file-input" name="imageProfile" title="Subir Fotografía">
                             <button type="button">
@@ -59,7 +59,7 @@
                                   </svg>
                             </button>
                             <span id="ficheros"></span>
-                        </div>
+                        </div> -->
                         <div>
                             <label for="organizador">¿Es usted organizador de carreras?</label> <label for="si">SI</label><input type="radio" name="organizador" value="si" id="si"> <label for="no">No</label><input type="radio" name="organizador" value="no" id="no">
                         </div>
