--- a/PAGINAS/masInformacion.html
+++ b/PAGINAS/masInformacion.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Detalles</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./CSS/masInformacion.css">
@@ -15,7 +16,7 @@
             <a href="./inicio.html"><img id="logo" src="../IMGS/logoRunTheMountain-removebg-preview.png" alt="RunTheMountain"></a>
         </div>
         <nav>
-            <a href="" class="aCabecera">Categorias y Premios</a>
+            <a href="#sectionCategorias" class="aCabecera">Categorías y Premios</a>
             <a href="" class="aCabecera" id="clasificacionesPasadas"></a>
             <div>
                 <span id="username"></span>
@@ -36,7 +37,7 @@
     <main>
         <div id="divPortada"></div>
         <div id="menu">
-            <div><span>CARRERA ZAMORANA</span></div><div><i class="bi bi-bookmark"></i></div>
+            <div><span>CARRERA ZAMORANA</span></div><div id="divFavorito"><i class="bi bi-bookmark" id="favorito"></i></div>
         </div>
 
         <section>
@@ -49,7 +50,7 @@
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         </div>
                         <div class="carousel-inner">
-                          <div class="carousel-item active">
+                          <!-- <div class="carousel-item active">
                             <img src="../API/users/user12/carreras/imagenes/65be6b6072fbe-image3.jpeg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
@@ -57,7 +58,7 @@
                           </div>
                           <div class="carousel-item">
                             <img src="../API/users/user12/carreras/imagenes/65be6b6074654-image1.jpg" class="d-block w-100" alt="...">
-                          </div>
+                          </div> -->
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -75,22 +76,22 @@
                     <div><span><i class="bi bi-circle-fill"></i> Distancia :</span><span id="distancia"></span></div>
                     <div><span><i class="bi bi-circle-fill"></i> Desnivel :</span><span id="desnivel"></span></div>
                     <div><span><i class="bi bi-circle-fill"></i> Modalidad :</span><span id="modalidad"></span></div>
-                    <div><span><i class="bi bi-circle-fill"></i> WEB :</span><span id="web"></span></div>
+                    <div><span><i class="bi bi-circle-fill"></i> WEB :</span><a href="" id="web"></a></div>
                     <div><span><i class="bi bi-circle-fill"></i> Lugar :</span><span id="lugar"></span></div>
-                    <div><a href="">DESCARGAR REGLAMENTO</a></div>
+                    <div><a href="" download id="reglamento">DESCARGAR REGLAMENTO</a></div>
                 </div>
                 <div id="map">
     
                 </div>
             </article>
         </section>
-        <section>
+        <section id="sectionCategorias">
             <article>
                 <div class="titulo">
                     <div><h2 class="h2Titulo">CATEGORÍAS Y PREMIOS</h2></div>
                 </div>
                 <div id="categorias">
-                    <div class="categoria">
+                    <!-- <div class="categoria">
                         <div class="categoriaCabecera">
                             <span class="nombreCategoria">CATEGORÍA ADULTA</span>
                             <span class="sexoCategoria">Masculina y Femenina</span>
@@ -125,12 +126,60 @@
                             <span id="segund">2. 200€</span>
                             <span id="tercero">3. 300€</span>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
+            </article>
+        </section>
+        <section id="clasificaciones">
+            <article>
+                <div class="titulo">
+                    <div><h2 class="h2Titulo">CLASIFICACIONES ANTERIORES</h2></div>
+                </div>
+                <div id="contenedorClasificaciones">
+                    <div id="tablaClasificacion">
+                        <div id="tablaCabecera">
+                            <div>
+                                <span>PUESTO</span>
+                            </div>
+                            <div>
+                                <span>NOMBRE</span>
+                            </div>
+                        </div>
+                        <div id="tablaBody">
+                            <div class="fila">
+                                <div><span>1.</span></div>
+                                <div><span id="primero">Juan Ramon Jimenez</span></div>
+                            </div>
+                            <div class="fila">
+                                <div><span>1.</span></div>
+                                <div><span id="segundo">Juan Ramon Jimenez</span></div>
+                            </div>
+                            <div class="fila">
+                                <div><span>1.</span></div>
+                                <div><span id="tercero">Juan Ramon Jimenez</span></div>
+                            </div>
+                            <div class="fila">
+                                <div><span>1.</span></div>
+                                <div><span id="cuarto">Juan Ramon Jimenez</span></div>
+                            </div>
+                            <div class="fila">
+                                <div><span>1.</span></div>
+                                <div><span id="quinto">Juan Ramon Jimenez</span></div>
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="contenedor-select">
+                        <select name="categorias" id="selectCategoria">
+                          <option value="0">CATEGORÍA ADULTA</option>
+                          <option value="1">CATEGORÍA JUVENIL</option>
+                          <option value="2">CATEGORÍA INFANTIL</option>
+                        </select>
+                      </div>
             </article>
         </section>
     </main>
 </body>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 <script src="../bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
 <script src="./JS/masInformacion.js"></script>
 </html>
