--- a/PAGINAS/masInformacion.html
+++ b/PAGINAS/masInformacion.html
@@ -24,7 +24,7 @@
                     <a href="./perfil.html">PERFIL</a>
                     <a href="">FAVORITOS</a>
                     <a href="">INSCRITOS</a>
-                    <a href="">CERRAR SESION</a>
+                    <a href="" id="cerrarSesionDesplegable">CERRAR SESION</a>
                 </div>
             </div>
         </nav>
