--- a/landingPage.html
+++ b/landingPage.html
@@ -47,7 +47,7 @@
                     <input type="password" name="password" id="pass" title="contraseña" placeholder="Contraseña" required>
                     <input class="boton" type="submit" id="entrar" value="ENTRAR">
                     <p>O</p>
-                    <input class="boton" type="button" value="INVITADO">
+                    <input class="boton" type="button" value="INVITADO" id="invitado">
                    <div id="makeAccount"> 
                     <p>¿Aun no tienes cuenta?</p>
                     <p>Créela totalmente gratis <a href="./register.html">Aquí</a></p>
