--- a/landingPage.html
+++ b/landingPage.html
@@ -12,8 +12,8 @@
             <img id="logo" src="./IMGS/logoRunTheMountain-removebg-preview.png" alt="RunTheMountain">
         </div>
         <nav>
-            <a href="">¿Que Hacemos?</a>
-            <a href="">¿Quienes Somos?</a>
+            <a href="#divSecciones1">¿Que Hacemos?</a>
+            <a href="#divSecciones2">¿Quienes Somos?</a>
         </nav>
         <div id="formaCabecera">
             <svg xmlns="http://www.w3.org/2000/svg" width="762" height="98" viewBox="0 0 762 98" fill="none">
@@ -42,6 +42,7 @@
             </article>
             <article>
                 <form action="" method="get">
+                    <span id="inicioIncorrecto"></span>
                     <p id="startNow">COMIENZA AHORA</p>
                     <input type="text" name="username" id="user" title="usuario" placeholder="Usuario" required>
                     <input type="password" name="password" id="pass" title="contraseña" placeholder="Contraseña" required>
