--- a/PAGINAS/perfil.html
+++ b/PAGINAS/perfil.html
@@ -156,6 +156,19 @@
           </div>
         </div>
     </div>
+    <div id="miModalBorrarCarrera" class="modal">
+        <div class="modal-contenido">
+          <span id="cerrarBorrarCarreraX" class="cerrar"><i class="bi bi-x-circle"></i></span>
+          <h2>BORRAR CARRERA</h2>
+          <div class="modal-cuerpo">
+            <p>¿Estas seguro de que deseas borrar esta carrera? Algunas personas pueden estar interesadas</p>
+          </div>
+          <div class="modal-pie">
+            <button id="cancelarBorrarCarrera">CANCELAR</button>
+            <button id="borrarCarreraModal">BORRAR CARRERA</button>
+          </div>
+        </div>
+    </div>
     <div id="miModalNuevaCarrera" class="modal">
         <div class="modal-contenido">
           <span id="cerrarCarreraX" class="cerrar"><i class="bi bi-x-circle"></i></span>
