--- a/PAGINAS/perfil.html
+++ b/PAGINAS/perfil.html
@@ -236,9 +236,9 @@
         </div>
           <div class="modal-pie">
             <div id="divPaginacionMostrarCarreras">
-                <span>Anterior</span>
+                <span class="prev">Anterior</span>
                 <span id="paginaActualMostrarCarreras"></span>
-                <span>Siguiente</span>
+                <span class="next">Siguiente</span>
                
             </div>
             <button id="cancelarMostrarCarreras">CANCELAR</button>
