--- a/PAGINAS/inicio.html
+++ b/PAGINAS/inicio.html
@@ -56,9 +56,9 @@
                 <div id="ordenar">
                     <p id="filter">Ordenar<i class="bi bi-funnel-fill"></i></p>
                     <div id="desplegableOrdenar">
-                        <span>NOMBRE A-Z</span>
-                        <span>FECHA</span>
-                        <span>DISTANCIA</span>
+                        <span id="porNombre">NOMBRE A-Z</span>
+                        <span id="porFecha">FECHA (ASC)</span>
+                        <span id="porDistancia">DISTANCIA (ASC)</span>
                     </div>
                 </div>
             <div id="carreras">
