--- a/PAGINAS/perfil.html
+++ b/PAGINAS/perfil.html
@@ -222,7 +222,7 @@
                 </div>
             </div>
           <div class="modal-pie">
-            <button class="crearCarreraBoton">GUARDAR MODALIDADES</button>
+            <button class="crearCarreraBoton" id="crearModalidades">GUARDAR MODALIDADES</button>
           </div>
         </div>
     </div>
@@ -297,7 +297,7 @@
                 </div>
             </div>
           <div class="modal-pie">
-            <button class="crearCarreraBoton">GUARDAR MODALIDADES</button>
+            <button class="crearCarreraBoton" id="editarCrearModalidades">GUARDAR MODALIDADES</button>
           </div>
         </div>
     </div>
