--- a/PAGINAS/perfil.html
+++ b/PAGINAS/perfil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
-    
+    <link rel="shortcut icon" href="../IMGS/icon_d73a73437fc1631725159141d5516b53.ico" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/perfil.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -176,7 +176,6 @@
             <div><label for="portada">Portada</label> <input type="file" name="portada" id="portada" title="Foto portada" accept=".jpg, .jpeg, .png"></div>
             <div><label for="nombreCarrera">Nombre de la Carrera</label> <input type="text" placeholder="Nombre de la Carrera" name="nombreCarrera" id="nombreCarrera" title="Nombre de la Carrera"></div>
             <div id="fechaDiv"><label for="fecha">Fecha</label> <input type="date" name="fecha" id="fecha" title="Fecha del Evento"></div>
-            <!-- <div><label for="localizacion">Localización</label><input type="text" name="localizacion" id="localizacion" placeholder="Escribe la localización de la carrera" title="Escribe la localización de la carrera"></div> -->
             <div><label for="localizacion">Localización</label><select name="localizacion" id="localizacion"></select></div>
             <button id="modalidades">MODALIDADES Y CATEGORÍAS<i class="bi bi-plus-circle"></i></button>
             <div><label for="track">Archivo .GPX de la carrera</label><input type="file" name="track" id="track" title="Track de la carrera" accept=".gpx"></div>
@@ -213,12 +212,7 @@
             <div id="modalidadesSeleccionadas">
                 <p>Seleccione los premios para las modalidades de <span id="modalidadEscogida"></span> :</p>
                 <div id="premios">
-                    <!-- <div class="premioCategoria">
-                        <p id="premiosNombreCategoria">TRAIL</p>
-                        <div><label for="posicion1">1.</label><input type="text" id="posicion1" name="posicion1" title="Premio primera posicion" placeholder="Pj. 300€"></div>
-                        <div><label for="posicion2">2.</label><input type="text" id="posicion2" name="posicion2" title="Premio segunda posicion" placeholder="Pj. 200€"></div>
-                        <div><label for="posicion3">3.</label><input type="text" id="posicion3" name="posicion3" title="Premio tercera posicion" placeholder="Pj. 100€"></div>
-                    </div> -->
+        
                 </div>
             </div>
           <div class="modal-pie">
@@ -288,12 +282,6 @@
             <div id="editarModalidadesSeleccionadas">
                 <p>Seleccione los premios para las modalidades de <span id="editarModalidadEscogida"></span> :</p>
                 <div id="editarPremios">
-                    <!-- <div class="premioCategoria">
-                        <p id="premiosNombreCategoria">TRAIL</p>
-                        <div><label for="posicion1">1.</label><input type="text" id="editarPosicion1" name="posicion1" title="Premio primera posicion" placeholder="Pj. 300€"></div>
-                        <div><label for="posicion2">2.</label><input type="text" id="editarPosicion2" name="posicion2" title="Premio segunda posicion" placeholder="Pj. 200€"></div>
-                        <div><label for="posicion3">3.</label><input type="text" id="editarPosicion3" name="posicion3" title="Premio tercera posicion" placeholder="Pj. 100€"></div>
-                    </div> -->
                 </div>
             </div>
           <div class="modal-pie">
