--- a/landingPage.html
+++ b/landingPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RunTheMountains</title>
     <link rel="stylesheet" href="./CSS/landingPage.css">
+    <link rel="shortcut icon" href="./IMGS/icon_d73a73437fc1631725159141d5516b53.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -53,16 +54,10 @@
                     <p>¿Aun no tienes cuenta?</p>
                     <p>Créela totalmente gratis <a href="./register.html">Aquí</a></p>
                    </div>
-                </form>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="468" height="666" viewBox="0 0 624 888" fill="none">
-                    <path d="M153.328 420.605L0 0H625V888H37.3972L153.328 420.605Z" fill="white" fill-opacity="0.81"/>
-                </svg>                   -->
+                </form>               
             </article>
         </section>
         <section class="hidden">
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="1437" height="1026" viewBox="0 0 1437 1026" fill="none">
-                <path d="M0 1025.5C579.137 967.35 887.426 757.254 1437 0.5H0V1025.5Z" fill="white" fill-opacity="0.81"/>
-              </svg> -->
 
               <div class="divSecciones" id="divSecciones1">
                     <h2>¿Que Hacemos?</h2>
@@ -72,9 +67,6 @@
                 </div>
         </section>
         <section class="hidden">
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="1437" height="1026" viewBox="0 0 1437 1026" fill="none">
-                <path d="M0 1025.5C579.137 967.35 887.426 757.254 1437 0.5H0V1025.5Z" fill="white" fill-opacity="0.81"/>
-              </svg> -->
               <div class="divSecciones" id="divSecciones2">
                 <h2>¿Quienes Somos?</h2>
                 <div></div>
