--- a/PAGINAS/inicio.html
+++ b/PAGINAS/inicio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
+    <link rel="shortcut icon" href="../IMGS/icon_d73a73437fc1631725159141d5516b53.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="stylesheet" href="./CSS/inicio.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
@@ -25,7 +26,6 @@
                 <div id="desplegable">
                     <a href="./perfil.html">PERFIL</a>
                     <a href="./perfil.html#sectionFavoritos">FAVORITOS</a>
-                    <!-- <a href="" id="enlaceEditorCarreras">EDITAR CARRERAS</a> -->
                     <a href="" id="cerrarSesionDesplegable">CERRAR SESION</a>
                 </div>
             </div>
@@ -63,17 +63,7 @@
                 </div>
             <div id="carreras">
                 <div id="rejillaCarreras">
-                    <!-- <div class="tarjetaCarrera">
-                    <div class="fotoPortada">
-
-                    </div>
-                    <div class="datosCarrera">
-                        <span class="fecha"><i class="bi bi-calendar-fill"></i>27/07/2008</span>
-                        <span class="localidad"><i class="bi bi-geo-alt-fill"></i>BENAVENTE</span>
-                        <span class="distancia"><i class="bi bi-info-circle-fill"></i></i>89KM</span>
-                        <a href="./masInformacion.html"><div class="detallesCarrera">MAS INFORMACIÓN</div></a>
-                    </div>
-                </div> -->
+                 
                 </div>
                 <div id="divPaginacion">
                     <span class="first">Primera</span>
